[gd_scene load_steps=5 format=2]

[ext_resource path="res://UIElements/Textbox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PAPYRUS.TTF" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.94902, 0.796078, 0.796078, 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="TextBox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextBoxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 175.0
margin_top = -185.0
margin_right = -175.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextBoxContainer"]
use_parent_material = true
margin_right = 674.0
margin_bottom = 105.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextBoxContainer"]
margin_right = 674.0
margin_bottom = 105.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="TextBoxContainer/MarginContainer"]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 644.0
margin_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 644.0
margin_bottom = 75.0

[node name="StartSymbol" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 45.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "\""

[node name="LabelText" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 600.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Where am I? What was I doing? I only remember an eerie feeling... "
align = 1
autowrap = true
clip_text = true

[node name="EndSymbol" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 604.0
margin_right = 614.0
margin_bottom = 45.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "\""

[node name="Tween" type="Tween" parent="."]
